<?xml version="1.0"?>
<package format="3">
  <name>pal_gazebo_worlds</name>
  <version>4.0.3</version>
  <description>Simulation worlds for PAL robots.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <license>Apache License 2.0</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <url type="website">https://github.com/pal-robotics/pal_gazebo_worlds/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_auto</build_depend>

  <exec_depend condition="$PAL_DISTRO >= alum">pal_gazebo_worlds_private</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
